tests/negative/regression/r15.orng
fn main() -> Int { 
    errdefer 3.4 % unreachable * ? if - match & - match & & & & [ ] not match not while if ? while - while while unreachable { } { } { } { } { } { } { } { } { }
} 
